AdBlock Improvements: - implemented "third party" support - do NOT block first requests (you cannot even see a blank page, sometimes...)

BUG:270356

PS:
Alberto, can you pls check this really works for you before backporting to
0.7 and let me know about?
Many thanks for.